HTML writer: output video and audio elements
depending on file extension of the image path

--- a/test/command/4012.md
+++ b/test/command/4012.md
@@ -4,5 +4,5 @@ pandoc -f markdown-implicit_figures
 
 [image]: http://example.com/image.jpg {height=35mm}
 ^D
-<p><img src="http://example.com/image.jpg" alt="image" style="height:35mm" /></p>
+<p><img src="http://example.com/image.jpg" style="height:35mm" alt="image" /></p>
 ```
