--- a/test/command/5121.md
+++ b/test/command/5121.md
@@ -5,7 +5,7 @@
 ## Header 2
 ^D
 <figure>
-<img src="./my-figure.jpg" alt="" width="500" /><figcaption>My caption</figcaption>
+<img src="./my-figure.jpg" width="500" alt="" /><figcaption>My caption</figcaption>
 </figure>
 
 Header 2
