--- a/test/command/3577.md
+++ b/test/command/3577.md
@@ -16,10 +16,10 @@
 \end{figure}
 ^D
 <figure>
-<img src="img1.jpg" alt="Caption 1" /><figcaption>Caption 1</figcaption>
+<img src="img1.jpg" alt="" /><figcaption>Caption 1</figcaption>
 </figure>
 <figure>
-<img src="img2.jpg" alt="Caption 2" /><figcaption>Caption 2</figcaption>
+<img src="img2.jpg" alt="" /><figcaption>Caption 2</figcaption>
 </figure>
 ```
 ```
@@ -30,6 +30,6 @@
 \end{figure}
 ^D
 <figure>
-<img src="img1.jpg" alt="Caption 3" /><figcaption>Caption 3</figcaption>
+<img src="img1.jpg" alt="" /><figcaption>Caption 3</figcaption>
 </figure>
 ```
