--- a/test/command/4677.md
+++ b/test/command/4677.md
@@ -3,6 +3,6 @@
 ![Caption](img.png){#img:1}
 ^D
 <figure>
-<img src="img.png" alt="Caption" id="img:1" /><figcaption>Caption</figcaption>
+<img src="img.png" alt="" id="img:1" /><figcaption>Caption</figcaption>
 </figure>
 ```
