Add test for relative file: URI to #5517.

--- a/test/command/5517.md
+++ b/test/command/5517.md
@@ -24,3 +24,9 @@ to stdout and check that there is no warning.
 [Para [Image ("",[],[]) [] ("file://localhost/dev/null","")]]
 ^D
 ```
+
+```
+% pandoc -M title=test -f native -t epub -o /dev/null 2>&1
+[Para [Image ("",[],[]) [] ("file:lalune.jpg","")]]
+^D
+```
