Add hbox processing

--- a/test/command/4499.md
+++ b/test/command/4499.md
@@ -25,3 +25,31 @@ abc \mbox{def \\ ghi} jkl
 ^D
 <p>abc <span class="mbox">defghi</span> jkl</p>
 ```
+
+```
+% pandoc -f latex -t html
+\hbox{abc}
+^D
+<p><span class="hbox">abc</span></p>
+```
+
+```
+% pandoc -f latex+raw_tex -t native
+\hbox{abc}
+^D
+[Para [RawInline (Format "latex") "\\hbox{abc}"]]
+```
+
+```
+% pandoc -f latex -t html
+abc \hbox{\textit{def} ghi} jkl
+^D
+<p>abc <span class="hbox"><em>def</em> ghi</span> jkl</p>
+```
+
+```
+% pandoc -f latex -t html
+abc \hbox{def \\ ghi} jkl
+^D
+<p>abc <span class="hbox">defghi</span> jkl</p>
+```
