--- a/test/command/4499.md
+++ b/test/command/4499.md
@@ -1,55 +1,87 @@
 ```
 % pandoc -f latex -t html
-\mbox{abc}
+\mbox{abc def} ghi
 ^D
-<p><span class="mbox">abc</span></p>
+<p>abc def ghi</p>
 ```
 
 ```
 % pandoc -f latex+raw_tex -t native
-\mbox{abc}
+\mbox{abc def}
 ^D
-[Para [RawInline (Format "latex") "\\mbox{abc}"]]
+[Para [RawInline (Format "latex") "\\mbox{abc def}"]]
 ```
 
 ```
 % pandoc -f latex -t html
-abc \mbox{\textit{def} ghi} jkl
+abc \mbox{\textit{def ghi} jkl} mno
 ^D
-<p>abc <span class="mbox"><em>def</em> ghi</span> jkl</p>
+<p>abc <em>def ghi</em> jkl mno</p>
 ```
 
 ```
 % pandoc -f latex -t html
 abc \mbox{def \\ ghi} jkl
 ^D
-<p>abc <span class="mbox">defghi</span> jkl</p>
+<p>abc defghi jkl</p>
 ```
 
 ```
 % pandoc -f latex -t html
-\hbox{abc}
+abc \mbox{def
+ghi}
 ^D
-<p><span class="hbox">abc</span></p>
+<p>abc def ghi</p>
+```
+
+```
+% pandoc -f latex -t html
+abc \mbox{def \textit{ghi \\ jkl}
+mno} pqr
+^D
+<p>abc def <em>ghijkl</em> mno pqr</p>
+```
+
+```
+% pandoc -f latex -t html
+\hbox{abc def} ghi
+^D
+<p>abc def ghi</p>
 ```
 
 ```
 % pandoc -f latex+raw_tex -t native
-\hbox{abc}
+\hbox{abc def}
 ^D
-[Para [RawInline (Format "latex") "\\hbox{abc}"]]
+[Para [RawInline (Format "latex") "\\hbox{abc def}"]]
 ```
 
 ```
 % pandoc -f latex -t html
-abc \hbox{\textit{def} ghi} jkl
+abc \hbox{\textit{def ghi} jkl} mno
 ^D
-<p>abc <span class="hbox"><em>def</em> ghi</span> jkl</p>
+<p>abc <em>def ghi</em> jkl mno</p>
 ```
 
 ```
 % pandoc -f latex -t html
 abc \hbox{def \\ ghi} jkl
 ^D
-<p>abc <span class="hbox">defghi</span> jkl</p>
+<p>abc defghi jkl</p>
+```
+
+```
+% pandoc -f latex -t html
+abc \hbox{def
+ghi}
+^D
+<p>abc def ghi</p>
+```
+
+```
+% pandoc -f latex -t html
+abc \hbox{def \textit{ghi \\ jkl}
+mno} pqr
+^D
+<p>abc def <em>ghijkl</em> mno pqr</p>
 ```
