changed rendering of LineBreak to \hfill\break, fixes #3324

--- a/test/writer.latex
+++ b/test/writer.latex
@@ -123,7 +123,7 @@ item.
 
 Here's one with a bullet. * criminey.
 
-There should be a hard line break\\
+There should be a hard line break\hfill\break
 here.
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
