--- a/test/command/2874.md
+++ b/test/command/2874.md
@@ -3,12 +3,12 @@
 <a></a>
 <br/>
 ^D
-{}~\\
+{}~\hfill\break
 ```
 
 ```
 % pandoc -f html -t latex
 <a name="foo"></a><br/>
 ^D
-\protect\hypertarget{foo}{}{}~\\
+\protect\hypertarget{foo}{}{}~\hfill\break
 ```
